force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_ACV__c.field-meta.xml
<CustomField>
    <fullName>Quote_ACV__c</fullName>
    <formula>IF(
   SBQQ__Opportunity2__r.CloseDate&lt;DATEVALUE( $Label.Annualize_ACV_Date ),
   IF( SBQQ__SubscriptionTerm__c &lt; 12,
   IF(ACV_Bookings_Rollup__c &gt; 0,ACV_Bookings_Rollup__c,SBQQ__NetAmount__c),
   (IF(ACV_Bookings_Rollup__c &gt; 0,ACV_Bookings_Rollup__c,SBQQ__NetAmount__c) / SBQQ__SubscriptionTerm__c)* 12),
   (IF(ACV_Bookings_Rollup__c &gt; 0,ACV_Bookings_Rollup__c,SBQQ__NetAmount__c) / SBQQ__SubscriptionTerm__c)* 12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>