force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <description>Text field for Sales to use to label quotes</description>
    <label>Quote Name</label>
    <type>TextArea</type>
</CustomField>