force-app/main/default/objects/SBQQ__Quote__c/fields/Rationale_for_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rationale_for_Discount__c</fullName>
    <description>added for GTMS-13640</description>
    <label>Supporting Detail(s) on Reason Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>