force-app/main/default/objects/SBQQ__Quote__c/fields/Reason_for_Discount__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Discount__c</fullName>
    <description>Reason for Discount on CPQ Quote object</description>
    <label>Reason for Discount</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>