force-app/main/default/objects/SBQQ__Quote__c/fields/Recalculate_Quote__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Quote</label>
    <type>Checkbox</type>
</CustomField>