force-app/main/default/objects/SBQQ__Quote__c/fields/Recalculate_S_H_Cost__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_S_H_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to recalculate the Est. Shipping Cost field</inlineHelpText>
    <label>Recalculate S&amp;H Cost</label>
    <type>Checkbox</type>
</CustomField>