force-app/main/default/objects/SBQQ__Quote__c/fields/RejectedAddOn__c.field-meta.xml
<CustomField>
    <fullName>RejectedAddOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RejectedAddOn</label>
    <type>Checkbox</type>
</CustomField>