force-app/main/default/objects/SBQQ__Quote__c/fields/Relevant_additional_context__c.field-meta.xml
<CustomField>
    <fullName>Relevant_additional_context__c</fullName>
    <description>GTMS-15663</description>
    <label>Relevant additional context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>