force-app/main/default/objects/SBQQ__Quote__c/fields/Renewal_ACV__c.field-meta.xml
<CustomField>
    <fullName>Renewal_ACV__c</fullName>
    <description>Populated by QCP. Created as part of GTMS-6087</description>
    <label>Renewal ACV[Deprecated]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>