force-app/main/default/objects/SBQQ__Quote__c/fields/Renewal_ACV_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Renewal_ACV_Percentage__c</fullName>
    <description>Created as part of GTMS-6085</description>
    <formula>Renewal_ACV__c / Quote_ACV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal ACV %[Deprecated]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>