force-app/main/default/objects/SBQQ__Quote__c/fields/Renewal_ACV_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Renewal_ACV_Rollup__c</fullName>
    <label>Renewal ACV</label>
    <summarizedField>SBQQ__QuoteLine__c.Renewal_ACV2__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>