force-app/main/default/objects/SBQQ__Quote__c/fields/Renewal_Data_Error_Category__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Data_Error_Category__c</fullName>
    <description>Renewal_Data_Error_Category__c picklist field will identify any errors in the oppty quote data and this field is used by jobRecalculateQuote Batch class if it is true</description>
    <label>Renewal Data Error Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACVDidNotMatch</fullName>
                <label>ACV Did Not Match</label>
            </value>
            <value>
                <fullName>AmountDidNotMatch</fullName>
                <label>Amount Did Not Match</label>
            </value>
            <value>
                <fullName>LicenseTermDidNotMatch</fullName>
                <label>License Term Did Not Match</label>
            </value>
            <value>
                <fullName>ShippingAddressDidNotMatch</fullName>
                <label>Shipping Address Did Not Match</label>
            </value>
            <value>
                <fullName>PaymentTypeDidNotMatch</fullName>
                <label>Payment Type Did Not Match</label>
            </value>
            <value>
                <fullName>TaxIssue</fullName>
                <label>Tax Issue</label>
            </value>
            <value>
                <fullName>CalculationIssue</fullName>
                <label>Calculation Issue</label>
            </value>
            <value>
                <fullName>CleanData</fullName>
                <label>Clean Data</label>
            </value>
            <value>
                <fullName>NegativeBlendedDiscount</fullName>
                <label>Negative Blended Discount</label>
            </value>
            <value>
                <fullName>UpliftIsNull</fullName>
                <label>Uplift is Null</label>
            </value>
            <value>
                <fullName>UpliftNotMatch</fullName>
                <label>Quote Uplift Did Not Match with Contract Uplift</label>
            </value>
            <value>
                <fullName>DigitalRenewalJobFailed</fullName>
                <label>Digital Renewal Job Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>