force-app/main/default/objects/SBQQ__Quote__c/fields/Renewed_Line_ACV__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Line_ACV__c</fullName>
    <description>Set by Price Rule.
Created as part of GTMS-6085</description>
    <label>Renewed Line ACV[Deprecated]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>