force-app/main/default/objects/SBQQ__Quote__c/fields/Request_Activation_SKU_Bypass_Approval__c.field-meta.xml
<CustomField>
    <fullName>Request_Activation_SKU_Bypass_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this button to request that your Sales Director bypass the activation fees for a 12 month deal.</description>
    <inlineHelpText>Check this button to request that your Sales Director bypass the activation fees for a 12 month deal.</inlineHelpText>
    <label>Request Activation SKU Bypass Approval</label>
    <type>Checkbox</type>
</CustomField>