force-app/main/default/objects/SBQQ__Quote__c/fields/Request_Tracker_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Tracker_Id__c</fullName>
    <externalId>true</externalId>
    <label>Request Tracker Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>