force-app/main/default/objects/SBQQ__Quote__c/fields/Retrigger_CPQ_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Retrigger_CPQ_Calculation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This number field count will be updated which will retrigger the calculation.</description>
    <inlineHelpText>This number field count will be updated which will retrigger the calculation.</inlineHelpText>
    <label>Retrigger CPQ Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>