force-app/main/default/objects/SBQQ__Quote__c/fields/S_H_Tax__c.field-meta.xml
<CustomField>
    <fullName>S_H_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is only available for Quotes originated for Mexico</inlineHelpText>
    <label>Shipping &amp; Handling Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>