force-app/main/default/objects/SBQQ__Quote__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <description>Holds the final Sales Tax to be copied to the associated opportunity.  (If its Primary)</description>
    <formula>IF( 
   ISBLANK(Shipping_Address_NEW__c), 
   99999.99, 
   IF( 
      Sales_Tax_Historical__c != 0, 
      Sales_Tax_Historical__c, 
      Total_Sales_Tax__c+S_H_Tax__c
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>