force-app/main/default/objects/SBQQ__Quote__c/fields/Sales_Tax_Historical__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Historical__c</fullName>
    <label>Sales Tax Historical</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>