force-app/main/default/objects/SBQQ__Quote__c/fields/Sales_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Rate__c</fullName>
    <formula>IF(AND(NOT(ISBLANK(Shipping_Address_NEW__c)),
SBQQ__NetAmount__c &gt; 0), Total_Sales_Tax__c / (SBQQ__NetAmount__c+ IF(ISPICKVAL(Is_Installation_Reimbursable__c, &apos;No&apos;),Total_Estimated_Installation_Costs__c,0)), 99999)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>