force-app/main/default/objects/SBQQ__Quote__c/fields/Selected_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Selected_Payment_Type__c</fullName>
    <inlineHelpText>For Direct Annual or Direct Monthly payments, the total amount (TCV) of the quote must be $10,000 or greater. For Direct Monthly, the account must also be approved for Direct Monthly payments.  Existing customers must not be delinquent on payments.</inlineHelpText>
    <label>Selected Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Annual</fullName>
            </value>
            <value>
                <fullName>Direct Monthly</fullName>
            </value>
            <value>
                <fullName>Upfront Payments</fullName>
            </value>
            <value>
                <fullName>Direct Quarterly</fullName>
            </value>
            <value>
                <fullName>Direct Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
                <isActive>false</isActive>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Upfront</fullName>
                <isActive>false</isActive>
                <label>Upfront</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>