force-app/main/default/objects/SBQQ__Quote__c/fields/Ship_From_Location__c.field-meta.xml
<CustomField>
    <fullName>Ship_From_Location__c</fullName>
    <defaultValue>&quot;DCL&quot;</defaultValue>
    <label>Ship From Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ship_From</valueSetName>
    </valueSet>
</CustomField>