force-app/main/default/objects/SBQQ__Quote__c/fields/Shipping_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account_Type__c</fullName>
    <label>Shipping Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Samsara Account</fullName>
                <default>true</default>
                <label>Samsara Account</label>
            </value>
            <value>
                <fullName>Cust/Partner Account - FedEx</fullName>
            </value>
            <value>
                <fullName>Cust/Partner Account - UPS</fullName>
            </value>
            <value>
                <fullName>Cust/Partner Account - DHL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>