force-app/main/default/objects/SBQQ__Quote__c/fields/Shipping_Address_NEW__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_NEW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address - NEW</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Shipping_Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.SBQQ__Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Shipping_Address__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>