force-app/main/default/objects/SBQQ__Quote__c/fields/Shipping_and_Handling__c.field-meta.xml
<CustomField>
    <fullName>Shipping_and_Handling__c</fullName>
    <formula>Shipping_and_Handling_Value__c</formula>
    <inlineHelpText>If stuck in $99,999, first check for a shipping address added on the quote.  If still $99,999, email 
orders-requests@samsara.com for help</inlineHelpText>
    <label>Shipping and Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>