force-app/main/default/objects/SBQQ__Quote__c/fields/Shipping_and_Handling_Manual__c.field-meta.xml
<CustomField>
    <fullName>Shipping_and_Handling_Manual__c</fullName>
    <description>Manually entered shipping and handling (overrides calculated value)</description>
    <inlineHelpText>Manual shipping and handling cost. (overrides auto-calculated value)</inlineHelpText>
    <label>Shipping and Handling - Manual</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>