force-app/main/default/objects/SBQQ__Quote__c/fields/Shipping_and_Handling_Value__c.field-meta.xml
<CustomField>
    <fullName>Shipping_and_Handling_Value__c</fullName>
    <label>Shipping and Handling Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>