force-app/main/default/objects/SBQQ__Quote__c/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <label>Shipping Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPS</fullName>
                <default>true</default>
                <label>UPS</label>
            </value>
            <value>
                <fullName>FEDEX FREIGHT</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Fedex</fullName>
            </value>
            <value>
                <fullName>Freight Forwarding</fullName>
            </value>
            <value>
                <fullName>Estafeta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>