force-app/main/default/objects/SBQQ__Quote__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will Call</fullName>
            </value>
            <value>
                <fullName>UK Standard</fullName>
            </value>
            <value>
                <fullName>UK Express</fullName>
            </value>
            <value>
                <fullName>3 Day Select</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
                <default>true</default>
                <label>Ground</label>
            </value>
            <value>
                <fullName>Next Day Air</fullName>
            </value>
            <value>
                <fullName>Worldwide Expedited</fullName>
            </value>
            <value>
                <fullName>ECONOMY</fullName>
            </value>
            <value>
                <fullName>Fedex Freight Economy</fullName>
            </value>
            <value>
                <fullName>Ground - Mexico</fullName>
            </value>
            <value>
                <fullName>MX LTL</fullName>
            </value>
            <value>
                <fullName>MX Standard</fullName>
            </value>
            <value>
                <fullName>MX Express</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>