force-app/main/default/objects/SBQQ__Quote__c/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australian Capital Territory</fullName>
            </value>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>Acre</fullName>
            </value>
            <value>
                <fullName>Alagoas</fullName>
            </value>
            <value>
                <fullName>Amazonas</fullName>
            </value>
            <value>
                <fullName>Amapá</fullName>
            </value>
            <value>
                <fullName>Bahia</fullName>
            </value>
            <value>
                <fullName>Ceará</fullName>
            </value>
            <value>
                <fullName>Distrito Federal</fullName>
            </value>
            <value>
                <fullName>Espírito Santo</fullName>
            </value>
            <value>
                <fullName>Goiás</fullName>
            </value>
            <value>
                <fullName>Maranhão</fullName>
            </value>
            <value>
                <fullName>Minas Gerais</fullName>
            </value>
            <value>
                <fullName>Mato Grosso do Sul</fullName>
            </value>
            <value>
                <fullName>Mato Grosso</fullName>
            </value>
            <value>
                <fullName>Pará</fullName>
            </value>
            <value>
                <fullName>Paraíba</fullName>
            </value>
            <value>
                <fullName>Pernambuco</fullName>
            </value>
            <value>
                <fullName>Piauí</fullName>
            </value>
            <value>
                <fullName>Paraná</fullName>
            </value>
            <value>
                <fullName>Rio de Janeiro</fullName>
            </value>
            <value>
                <fullName>Rio Grande do Norte</fullName>
            </value>
            <value>
                <fullName>Rondônia</fullName>
            </value>
            <value>
                <fullName>Roraima</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>