force-app/main/default/objects/SBQQ__Quote__c/fields/Smart_Approve_Fields_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Smart_Approve_Fields_Indicator__c</fullName>
    <label>Smart Approve Fields Indicator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>