force-app/main/default/objects/SBQQ__Quote__c/fields/Snapshot_Quote__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTMS-26249 : Created to identify the Snapshot Quote</description>
    <label>Snapshot Quote</label>
    <type>Checkbox</type>
</CustomField>