force-app/main/default/objects/SBQQ__Quote__c/fields/Stripe_Intent_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Intent_Id__c</fullName>
    <label>Stripe Intent Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>