force-app/main/default/objects/SBQQ__Quote__c/fields/stripe_micro_link__c.field-meta.xml
<CustomField>
    <fullName>stripe_micro_link__c</fullName>
    <description>Link for customers to verify microdeposits if they paid ACH with microdeposits. Only exists if ACH was used and microdeposits selected for verification</description>
    <inlineHelpText>Link for customers to verify microdeposits if they paid ACH with microdeposits. Only exists if ACH was used and microdeposits selected for verification</inlineHelpText>
    <label>Stripe Microdeposit Verification Link</label>
    <type>TextArea</type>
</CustomField>