force-app/main/default/objects/SBQQ__Quote__c/fields/Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Amount__c</fullName>
    <label>Sum of Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>