force-app/main/default/objects/SBQQ__Quote__c/fields/Tax_Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>Tax_Calculation_Status__c</fullName>
    <label>Tax Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refresh</fullName>
                <color>#0B6FCE</color>
                <label>Quote is pending Tax calculation. Please wait for a minute and refresh the page</label>
            </value>
            <value>
                <fullName>Updated</fullName>
                <color>#78C953</color>
                <label>Tax has been Calculated if any questions please reach out to Tax team</label>
            </value>
            <value>
                <fullName>noaddress</fullName>
                <label>Shipping Address Is Blank</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>Empty Response from Vertex, please try again</label>
            </value>
            <value>
                <fullName>Validation</fullName>
                <label>Validation failed. Please check the Tax Status field and try again.</label>
            </value>
            <value>
                <fullName>Aborted</fullName>
                <label>Call to Vertex failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>